# hardware-hackme-1

./: .gitignore  PULL_REQUEST_TEMPLATE.md  README.md
aes-nostd/: Cargo.toml  README.md
aes-nostd/src/: aessafe.rs  cryptoutil.rs  lib.rs  simd.rs  step_by.rs  symmetriccipher.rs
cortex-m-rt-0.3.15/: Cargo.toml  README.md
cortex-m-rt-0.3.15/src/: lib.rs
cpld/: README.md  all-leds-on-goodvoltages.crbit  cpld.v  cpld_full_test.v  match-16bit-2819.crbit  match-64bit-22681f5dd3196c1f.crbit  matcher.v  matcher_test.v  rxpath.v  rxpath_test.v  txpath.v  txpath_test.v
cryptastic/: Cargo.toml
cryptastic/src/: lib.rs
docs/: design-doc-and-solutions.md
fw/: Cargo.toml  build.rs  crbit2bin.py  erase.py  flashomatic.sh  memory.x  provisioner.py  requirements.txt
fw/src/: basic_puzzles.rs  cli.rs  cpld.rs  cpld_puzzles.rs  crypto.rs  crypto_puzzles.rs  except_and_svc.rs  flash.rs  jtag.rs  main.rs  prng_puzzles.rs  sfx.rs
reference_solutions/: gdb_monitor_console.py  level0.txt  level1-pinbrute.py  level10-m4lh.py  level11.s  level12.txt  level13-stego1.txt  level14-stego2.txt  level2-pinbrute-timing.py  level3.txt  level4.txt  level6.py  level7-twiizers.py  level8-sony.py  level9-resethax.py  serial_port_util.py  upload_asm_level9masked.py  upload_bin.py
reference_solutions/golang/: serial_port_util.go
reference_solutions/java/: CTFSerial.java
reference_solutions/level5-lcg-break/: Cargo.toml
reference_solutions/level5-lcg-break/src/: main.rs
stm32f405/: Cargo.toml
